overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 html {
+  overflow: hidden;
   min-height: 100%;
 }
 
@@ -8,6 +9,7 @@ body {
   padding: 0;
   margin: 0;
   color:white;
+  overflow: auto;
 }
 
 /*body::webkit-scrollbar-thumb {
